# ilhop-manager

./: GEMINI.md  LICENSE  README.md  README_EN.md
backend/: main.py  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 2dfb05c7fd57_initial_tables.py  2ef4082e0ceb_make_timestamps_timezone_aware.py  30ad6c624f37_add_admin_config_table.py  30f3cfe7211a_add_metadata_table.py  6af903e92a18_add_title_to_metadata.py  6f7d8e9a0b1c_add_is_extended_to_customers.py  a61e5b7590fa_add_index_to_menu_and_unique_constraint.py  a6b1c2d3e4f5_add_time_settings_to_metadata.py  dbc53cbccdff_use_order_item_id_as_primary_key_for_.py  dde92fc1b3ec_make_menu_id_optional_in_order_items_.py  e23bbe198c1e_add_check_constraint_and_make_table_id_.py  ec982905412a_add_section_to_menus.py
backend/src/: app.py
backend/src/database/: crud.py  db.py  models.py
backend/src/modules/: auth.py  logging_config.py  websocket_manager.py
backend/src/routes/: admin.py  customer.py  external.py  menu.py  metadata.py  order.py  order_item.py  table.py  template.py  test.py  websocket.py
backend/src/schemas/: rest_schemas.py  ws_schemas.py
docs/: AsyncAPI.yaml  DB_schema.sql  FastAPI 백엔드 서버 실행 방법.md  OpenAPI.yaml  gemini_cli_대화세션_분기_사용법.md  git_commands_guide.md  github_repo_setup.md  psql_사용법.md  requirements.md  swagger.yaml  template.yaml  자주_쓰는_명령어.md
frontend/: .gitignore  components.json  next.config.ts  package.json  proxy.ts
frontend/app/: layout.tsx  page.tsx
frontend/components/: globals.css
frontend/lib/: definitions.ts  placeholder-data.ts  utils.ts
(+45 files in other folders)
